Manual change, Typo fixed
L.137: column -> row.
L.172: column -> row.

--- a/Manual/Manual.html
+++ b/Manual/Manual.html
@@ -134,7 +134,7 @@
 						</ul>
 						<p>Your starting column is the letter correspondent to the alphabetic position of your current number.</p>
 						<h4>Row position:</h4>
-						<p>The column is decided by the colors on the left and right arrows.</p>
+						<p>The row is decided by the colors on the left and right arrows.</p>
 						<ul>
 							<li>For every red arrow, add 4</li>
 							<li>For every blue arrow, add 3</li>
@@ -169,7 +169,7 @@
 						</ul>
 						<p>Your starting column is the letter correspondant to the alphabetic position of your current number. If this number is greater than 8, subtract 8. If the number is 0 or less, add 8.</p>
 						<h4>Row position:</h4>
-						<p>The column is decided by Edgework.</p>
+						<p>The row is decided by Edgework.</p>
 						<ul>
 							<li>Take the first number of the Serial Number.</li>
 							<li>Add the amount of unlit indicators and add 2 for every <u>lit</u> indicator.</li>
